# tedi

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: claude-code-review.yml  claude.yml  errors.yml  other.yml  release-linux-x86_64.yml  release-macos-aarch64.yml  release-macos-x86_64.yml  release.yml  warnings.yml
.readme_assets/: usage.md
docs/: ARCHITECTURE.md
docs/spec/: local.md
examples/: config.nix  md_parse.rs
src/: config.rs  github.rs  lib.rs  main.rs  manual_stats.rs  milestones.rs  mock_github.rs  mocks.rs  perf_eval.rs  shell_init.rs  sink.rs  utils.rs  watch_monitors.rs
src/blocker_interactions/: integration.rs  io.rs  mod.rs  operations.rs  source.rs
src/blocker_interactions/clockify/: mod.rs  protocol.rs  tracking.rs
src/issue/: blocker.rs  error.rs  events.rs  issue_ref.rs  marker.rs  milestone_embed.rs  mod.rs  types.rs  util.rs
src/local/: conflict.rs  fs_sink.rs  impl_sink.rs  mod.rs  reader.rs
src/local/consensus/: git.rs  mod.rs  sink.rs
src/open_interactions/: command.rs  conflict.rs  fetch.rs  files.rs  git.rs  merge.rs  meta.rs  mod.rs  sink.rs  sync.rs  touch.rs  tree.rs
src/open_interactions/consensus/: git.rs  mod.rs
src/open_interactions/local/: files.rs  meta.rs  mod.rs
src/open_interactions/remote/: mod.rs
src/remote/: mod.rs
src/snapshots/: tedi__sink__tests__compute_node_diff_body_changed.snap  tedi__sink__tests__compute_node_diff_comment_deleted.snap  tedi__sink__tests__compute_node_diff_pending_comment.snap  tedi__sink__tests__compute_node_diff_state_changed.snap
tedi/: Cargo.toml  build.rs
tedi/examples/: config.nix
tedi/src/: lib.rs  main.rs  milestones.rs  mock_github.rs  shell_init.rs  sink.rs  sprints.rs  utils.rs
tedi/src/blocker_interactions/: clockify_tracking.rs  integration.rs  io.rs  mod.rs  operations.rs  source.rs
tedi/src/issue/: blocker.rs  issue_ref.rs  marker.rs  milestone_embed.rs  mod.rs  types.rs
tedi/src/local/: blocker_cache.rs  fs_sink.rs  mod.rs
tedi/src/open_interactions/: merge.rs  sync.rs
tedi/tests/integration/: blocker_integrated.rs  file_naming.rs  main.rs  reset_conflict.rs  sync.rs  touch.rs
tedi/tests/integration/common/: mod.rs
tedi_adapters/: Cargo.toml
tedi_adapters/src/: clockify.rs  github.rs  lib.rs
tedi_core/: Cargo.toml
tedi_core/src/: blockers.rs  issue.rs  lib.rs  locate.rs  marker.rs  milestone.rs  milestone_embed.rs  taskview.rs  uri.rs
tedi_eval/: Cargo.toml
tedi_eval/src/: lib.rs  manual_stats.rs  perf_eval.rs  watch_monitors.rs
tedi_md/: Cargo.toml
tedi_md/examples/: md_parse.rs
tedi_md/src/: events.rs  lib.rs
tedi_ops/: Cargo.toml
tedi_ops/src/: lazy.rs  lib.rs  mock_github.rs  mocks.rs  paths.rs  sink.rs  sprints.rs  utils.rs
tedi_ops/src/blocker_interactions/: clockify_tracking.rs  integration.rs  io.rs  mod.rs  operations.rs
tedi_ops/src/local/: blocker_cache.rs  conflict.rs  fs_sink.rs  milestone.rs  mod.rs  selection.rs
tedi_ops/src/local/consensus/: sink.rs
tedi_ops/src/open_interactions/: command.rs  merge.rs  milestone.rs  mod.rs  sync.rs  touch.rs
tedi_ops/src/remote/: milestone.rs  mod.rs
tedi_ops/tests/integration/: blocker_integrated.rs  file_naming.rs  issue_preservation.rs  main.rs  milestones.rs  reset_conflict.rs  sprints.rs  sync.rs  touch.rs  touch_parent.rs
tedi_ops/tests/integration/common/: mod.rs
tedi_task_operations/: Cargo.toml
tedi_task_operations/src/: clockify_tracking.rs  conflict_resolve.rs  lib.rs  selection.rs  sprints.rs
tedi_task_operations/src/open_interactions/: command.rs  milestone.rs  mod.rs  sync.rs  touch.rs
tedi_task_operations/tests/integration/: blocker_integrated.rs  file_naming.rs  issue_preservation.rs  sprints.rs  sync.rs  touch_parent.rs
tedi_task_operations/tests/integration/common/: mod.rs
tedi_task_primitives/: Cargo.toml
tedi_task_primitives/src/: lib.rs  paths.rs  sink.rs
tedi_task_primitives/src/local/: conflict_detect.rs  fs_sink.rs  milestone.rs  mod.rs
tedi_task_primitives/src/local/consensus/: git.rs  mod.rs  sink.rs
tedi_task_primitives/src/remote/: milestone.rs
tests/integration/: blocker_integrated.rs  file_naming.rs  issue_preservation.rs  main.rs  milestones.rs  path_parsing.rs  reset_conflict.rs  sync.rs  touch.rs  touch_parent.rs
tests/integration/common/: git.rs  mod.rs  snapshot.rs
tests/integration/snapshots/: integration__sync__duplicate_sub_issues_filtered_from_remote.snap  integration__sync__force_merge_--force.snap  integration__sync__force_merge_--pull_--force.snap
