[package]
name = "tedi"
version = "0.14.1"
edition = "2024"
authors = ["Valeriy Sakharov <valeratrades@gmail.com>"]
description = "Personal productivity CLI for task tracking, time management, and GitHub issue integration"
license = "BlueOak-1.0.0"
repository = "https://github.com/valeratrades/tedi"
keywords = ["productivity", "task-management", "github", "time-tracking"]
categories = ["command-line-utilities"]

[package.metadata]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
default = []

[dependencies]
arrayvec = "0.7"
ask_llm = { version = "^2.1.4" }
async-trait = "^0.1.89"
async_from = "0.2.0"
base64 = "0.22"
clap = { version = "^4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
color-eyre = "0.6.5"
config = "^0.15.19"
copy_arrayvec = "0.1"
derive-new = "^0"
derive_more = { version = "2.1.1", features = ["from_str", "display", "from", "into_iterator"] }
futures = "0.3.31"
image = "0.25.9"
jiff = { version = "^0.2", features = ["serde"] }
libwayshot = "0.7.2"
miette = { version = "7", features = ["fancy"] }
pandoc = "^0.8.11"
png = "0.18"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22"
regex = "1.12.3"
reqwest = { version = "^0.13.2", features = ["blocking", "json"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.149", features = ["std"] }
smart-default = "^0.7"
tempfile = "^3.24.0"
thiserror = "2.0.18"
tokio = { version = "^1.49.0", features = ["rt", "rt-multi-thread"] }
tracing = "^0.1.44"
tracing-error = "0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
url = "^2.5"
urlencoding = "^2.1.3"
v_utils = { version = "^2.15.29", features = ["io", "async-io", "macros", "trades", "xdg", "cli"] }
xdg = "3.0.0"

[dev-dependencies]
ctor = "0.6"
derive_builder = "0.20"
insta = "1.46"
libc = "0.2"
rstest = "0.26"
v_fixtures = { version = "^0.3.4" }
walkdir = "2"

#[patch.crates-io]
#v_utils = { path = "../v_utils/v_utils" }
#v_fixtures = { path = "../v_fixtures" }

[[test]]
name = "integration"
path = "tests/integration/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
doc_lazy_continuation = "allow"

tabs_in_doc_comments = "allow"
