[package]
name = "tedi_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Pure todo primitives (issues, blockers) and their parse/serialize for tedi"
license.workspace = true
repository.workspace = true

[dependencies]
tedi_md.workspace = true

arrayvec.workspace = true
copy_arrayvec.workspace = true
derive-new.workspace = true
derive_more.workspace = true
jiff.workspace = true
miette.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-error.workspace = true
url.workspace = true
v_utils.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
